project/warning.txt
msp430-elf-gcc -mmcu=msp430g2553 -Wall main.c state_asm.s -o toy.elf
main.c: In function 'buzz':
main.c:22:5: error: __delay_cycles() only takes constant arguments
     __delay_cycles(1000000 / (freq * 2));
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Makefile:5: toy.elf] Error 1
